class GithubUserData {
  const GithubUserData(this.loginName);
  final String loginName;
}
